--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ padding-top: 50px;
   }
 body {
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-background-image: "wp2895299-free-wallpaper.jpg";
+
 background-size: cover;
 background-repeat: no-repeat;
 color: orange;
@@ -27,5 +27,5 @@ background: #000 ;
 }
 .weather-homework {
 max-width: 600px;
-margin: 10%;
+margin: 0;
 }
