--- a/src/styles.css
+++ b/src/styles.css
@@ -5,11 +5,9 @@ padding-top: 50px;
 body {
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-background-size: cover;
-background-repeat: no-repeat;
-color: orange;
-border: 2px solid green;
-background: #000 ;
+
+
+
 
 }    
 .search {
@@ -27,5 +25,10 @@ background: #000 ;
 }
 .weather-homework {
 max-width: 600px;
-margin: 0;
+margin: 40px auto;
+padding: 20px;
+border: 2px solid green;
+border-radius: 5px;
+color: orange;
+background: #000;
 }
