--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,4 @@
-h1 {
-text-align: center;
-padding-top: 50px;
-  }
+
 body {
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
@@ -31,4 +28,21 @@ border: 2px solid green;
 border-radius: 5px;
 color: orange;
 background: #000;
+}
+h1 {
+    font-size: 36px;
+    font-weight: 200;
+    line-height: 27px;
+}
+ul {
+    padding: 0;
+    margin: 0;
+}
+li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 23px;
 }
