--- a/src/styles.css
+++ b/src/styles.css
@@ -11,14 +11,14 @@ h1 {
 
 ul {
     padding: 0;
-    margin: 0;
+    margin: 0, 0, 20, 0px;
 }
 
 li {
     list-style: none;
     padding: 0;
     margin: 0;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 200;
     line-height: 23px;
 }
