--- a/src/styles.css
+++ b/src/styles.css
@@ -54,5 +54,9 @@ li {
 .weather-temperature strong {
     font-size: 36px;
     line-height: 1;
-    
+    font-weight: 400;
+}
+.weather-temperature .units {
+    position: relative;
+    top: -12px;
 }
