--- a/src/styles.css
+++ b/src/styles.css
@@ -25,6 +25,7 @@ li {
 
 .search {
     padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .row {
@@ -56,7 +57,7 @@ li {
     font-size: 36px;
     line-height: 1;
     font-weight: 400;
-    padding: 20px;
+    padding-top: 20px;
 }
 .weather-temperature .units {
     position: relative;
