changed color of active or non active link fer temp

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,7 +64,7 @@ li {
     top: -12px;
 }
 .weather-temperature .active {
-    color: #000;
+    color: orange;
     cursor: default;
 }
 .weather-temperature .active:hover {
