--- a/src/styles.css
+++ b/src/styles.css
@@ -20,7 +20,7 @@ li {
     padding: 0;
     margin: 0;
     font-size: 16px;
-    font-weight: 200;
+ 
     line-height: 23px;
 }
 
@@ -59,16 +59,17 @@ li:first-letter {
 }
 .weather-temperature strong {
     font-size: 36px;
-    line-height: 1;
+ 
     font-weight: 400;
     
 }
 .weather-temperature img {
     margin-right: 5px;
-  
+    position: relative;
+
 }
 .weather-temperature .units {
-    position: relative;
+    position:fixed;
    
 
 }
